tests/expectations/parser/finalize/finalize_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'Fn', 'program', 'script' -- found 'finalize'
    --> test:3:3
     |
   3 | } finalize {
     |   ^^^^^^^^
